[chore] add root ref .

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   <!-- CSS -->
-  <link rel="stylesheet" href="/dist/bootstrap.min.css">
-  <link rel="stylesheet" href="/dist/styles-dist.css">
+  <link rel="stylesheet" href="./dist/bootstrap.min.css">
+  <link rel="stylesheet" href="./dist/styles-dist.css">
   <title>Hello, world!</title>
 </head>
 
@@ -101,8 +101,8 @@
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
 
-  <script src="/dist/bootstrap.bundle.min.js"> </script>
-  <script src="/dist/scripts-dist.js"> </script>
+  <script src="./dist/bootstrap.bundle.min.js"> </script>
+  <script src="./dist/scripts-dist.js"> </script>
 </body>
 
 </html>
